# house-price-predictor

./: .gitignore  Cargo.toml  Makefile
input/datasets/: sample.csv
input/models/: sample.txt
output/models/: sample.txt
src/: lib.rs  main.rs
src/modules/: aws.rs  data.rs  model.rs
