[package]
name = "house-price-predictor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
csv = "1.2"
anyhow = "1.0"
polars = { version = "0.37.0", features = ["csv", "lazy", "ndarray"] }
rand = "0.8.5"
xgboost = "0.1.4"
aws-config = "1.5.10"
aws-sdk-s3 = "1.65.0"
tokio = { version = "1.42.0", features = ["full"] }
